Der DbBrowser service ist jetzt nicht mehr im AppServer implementiert sondern im Controller. Der Service ist nur für privilegierte AppServer nutzbar!
git-svn-id: svn://localhost/twospot_svn/trunk@630 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Portal/.classpath
+++ b/Portal/.classpath
@@ -34,5 +34,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-client-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-client/src"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-io-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-io/src"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-http-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-http/src"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Controller"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
