Build-Scripte für Master und Controller
git-svn-id: svn://localhost/twospot_svn/trunk@635 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Controller/build.xml
+++ b/Controller/build.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project basedir="." default="all" name="Util">
+<project basedir="." default="all" name="Controller">
 
-	<import file="./classpath.xml" />
+	<import id="" file="./classpath.xml" />
 
-	<property name="jar" value="twospot-util.jar" />
+	<property name="jar" value="twospot-controller.jar" />
 
 	<property name="src" value="./src" />
 	<property name="etc" value="./etc" />
