--- a/Master/build.xml
+++ b/Master/build.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project basedir="." default="all" name="Util">
+<project basedir="." default="all" name="Master">
 
 	<import file="./classpath.xml" />
 
-	<property name="jar" value="twospot-util.jar" />
+	<property name="jar" value="twospot-master.jar" />
 
 	<property name="src" value="./src" />
 	<property name="etc" value="./etc" />
@@ -39,6 +39,6 @@
 		</exec>
 	</target>
 
-	<target name="all" depends="package,cleanup" />
+	<target name="all" depends="mkcp,package,cleanup" />
 
 </project>
