--- a/Master/.classpath
+++ b/Master/.classpath
@@ -11,9 +11,9 @@
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/log4j-1.2.15/log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/zookeeper-3.2.1/zookeeper-3.2.1.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Util"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Controller"/>
 	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-jms.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-tx.jar"/>
+	<classpathentry kind="lib" path="/Util/twospot-util.jar"/>
+	<classpathentry kind="lib" path="/Controller/twospot-controller.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
