Build-Scripte angepasst. Das script zum generieren der classpath dateien ist jetzt im Build-Projekt. Es werden zwei classpath dateien angelegt. Eine mit einem path für ant-Buildscripts (zum kompilieren) und eine zum Starten über das start python script.
git-svn-id: svn://localhost/twospot_svn/trunk@643 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Controller/.classpath
+++ b/Controller/.classpath
@@ -57,6 +57,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/Libs/gen/hbaseplugin.jar"/>
-	<classpathentry kind="lib" path="/Util/twospot-util.jar"/>
+	<classpathentry kind="lib" path="/Libs/gen/twospot-util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
