--- a/Frontend/.classpath
+++ b/Frontend/.classpath
@@ -16,7 +16,7 @@
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-continuation-7.0.0.v20091005.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-client-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-client/src"/>
 	<classpathentry kind="lib" path="/Libs/lib/zookeeper-3.2.1/zookeeper-3.2.1.jar"/>
-	<classpathentry kind="lib" path="/Master/twospot-master.jar"/>
-	<classpathentry kind="lib" path="/Util/twospot-util.jar"/>
+	<classpathentry kind="lib" path="/Libs/gen/twospot-util.jar"/>
+	<classpathentry kind="lib" path="/Libs/gen/twospot-master.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
