--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -59,7 +59,7 @@
 	<classpathentry kind="lib" path="/Libs/lib/zookeeper-3.2.1/zookeeper-3.2.1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/h2-1.2.123/h2-1.2.123.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-rdbms-2.0.0-m2.jar"/>
-	<classpathentry kind="lib" path="/Controller/twospot-controller.jar"/>
-	<classpathentry kind="lib" path="/Util/twospot-util.jar"/>
+	<classpathentry kind="lib" path="/Libs/gen/twospot-controller.jar"/>
+	<classpathentry kind="lib" path="/Libs/gen/twospot-util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
