--- a/Master/.classpath
+++ b/Master/.classpath
@@ -13,7 +13,7 @@
 	<classpathentry kind="lib" path="/Libs/lib/zookeeper-3.2.1/zookeeper-3.2.1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-jms.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-tx.jar"/>
-	<classpathentry kind="lib" path="/Util/twospot-util.jar"/>
-	<classpathentry kind="lib" path="/Controller/twospot-controller.jar"/>
+	<classpathentry kind="lib" path="/Libs/gen/twospot-controller.jar"/>
+	<classpathentry kind="lib" path="/Libs/gen/twospot-util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
