Die etc-Verzeichnisse werden nicht mehr in die jar-Files übernommen.
git-svn-id: svn://localhost/twospot_svn/trunk@644 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Frontend/build.xml
+++ b/Frontend/build.xml
@@ -23,9 +23,9 @@
 			<classpath refid="classpath" />
 		</javac>
 
-		<copy todir="${build}">
+		<!--<copy todir="${build}">
 			<fileset dir="${etc}" />
-		</copy>
+		</copy>-->
 	</target>
 
 	<target name="package" depends="build">
