--- a/Controller/build.xml
+++ b/Controller/build.xml
@@ -47,10 +47,10 @@
 			<classpath refid="classpath" />
 		</javac>
 
-		<copy todir="${build}">
+		<!--<copy todir="${build}">
 			<fileset dir="${etc}" />
 		</copy>
-	</target>
+	--></target>
 
 	<target name="package" depends="build,enhance">
 		<jar destfile="${jar}">
