Der Classpath zum Starten der AppServer über den Controller muss speziell generiert werden. Momentan ist das noch einfach vom AppServer rauskopiert. Die Policy-Implementierung wurde bezüglich der Autoconfig-Eigenschaften verbessert. Die statisch konfigurierten Verzeichnisse sind vollständig entfernt. Script zum erstellen der Classpath-Dateien verbessert. Server mit Portal-Anwendung läuft auf den VM's der HS.
Start-Skripte verbessert. Das Python-Script schreibt beim Start PID-Files und kann damit die Prozesse killen. 

Info-Dokument zu den wichtigen Konfigurationsateien. 

Starte verbesserungen an der Hard-Policy. Das JDK-Verzeichnis wird immer freigegeben. AllPermissions für die AppServer entfernt. Die implies-Methode wird nicht mehr im Debug-Modus betrieben d.h. gibt bei fehlenden Permissions false zurück. (In den Logs tauchen keine Permission-Warnings mehr auf)

Der Classpath zum starten vom AppServer über den Controller kann über eine Konfigurainsdatei eingestellt werden. Notwendig da sich der Classpath vom Development und Deploy-Betrieb unterschieden.

Sonstige kleine Änderungen.

git-svn-id: svn://localhost/twospot_svn/trunk@649 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -61,5 +61,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-rdbms-2.0.0-m2.jar"/>
 	<classpathentry kind="lib" path="/Libs/gen/twospot-controller.jar"/>
 	<classpathentry kind="lib" path="/Libs/gen/twospot-util.jar"/>
+	<classpathentry kind="lib" path="/Util/etc"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
