--- a/AppServer/etc/etc/appServer.properties
+++ b/AppServer/etc/etc/appServer.properties
@@ -14,8 +14,14 @@ appServer.security.DOSPrevention.time=40000
 
 ### Security manager configuration ###
 # Autodetect
-# appServer.security.manager.java.url=file:/C:/Program%20Files%20(x86)/Java/jre6/lib/-
+# Development
+appServer.security.manager.java.url=file:/C:/Program%20Files%20(x86)/Java/-
 # Autodetect
-# appServer.security.manager.java.dir=C:/Program Files(x86)/Java/jdk1.6.0_14/-
+# Development (Don't end with /-)
+appServer.security.manager.java.dir=C:/Program Files(x86)/Java/jdk1.6.0_14/
+# Autodetect
+# Development 
+appserver.security.manager.server.url=file:/D:/work/mscWolke/trunk/dev/-
 # Autodetect 
-# appserver.security.manager.server=D:/work/mscWolke/trunk/dev/Libs/-
+# Development (Don't end with /-)
+appserver.security.manager.server.dir=D:/work/mscWolke/trunk/dev/
