--- a/Controller/.classpath
+++ b/Controller/.classpath
@@ -58,5 +58,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="/Libs/gen/hbaseplugin.jar"/>
 	<classpathentry kind="lib" path="/Libs/gen/twospot-util.jar"/>
+	<classpathentry kind="lib" path="/Util/etc"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
