--- a/Master/.classpath
+++ b/Master/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-tx.jar"/>
 	<classpathentry kind="lib" path="/Libs/gen/twospot-controller.jar"/>
 	<classpathentry kind="lib" path="/Libs/gen/twospot-util.jar"/>
+	<classpathentry kind="lib" path="/Util/etc"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
