--- a/Util/etc/etc/config.properties
+++ b/Util/etc/etc/config.properties
@@ -6,6 +6,10 @@ rmi.registry.host=localhost
 rmi.registry.port=2299
 
 
+# Master
+zk.master.networkInterface=eth3
+
+
 # Frontend
 http.frontend.port=6060
 http.frontend.interface=0.0.0.0
@@ -15,6 +19,7 @@ http.frontend.interface=0.0.0.0
 rmi.controller.registry.port=2298
 http.controller.port=8080
 http.controller.interface=0.0.0.0
+zk.controller.networkInterface=eth3
 
 
 # AppServer
