--- a/Portal/.classpath
+++ b/Portal/.classpath
@@ -3,9 +3,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/servlet-api-2.5.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-validator-1.3.1.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/jstl.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/standard.jar"/>
+	<classpathentry kind="lib" path="portal/WEB-INF/lib/commons-validator-1.3.1.jar"/>
+	<classpathentry kind="lib" path="portal/WEB-INF/lib/jstl.jar"/>
+	<classpathentry kind="lib" path="portal/WEB-INF/lib/standard.jar"/>
 	<classpathentry kind="src" path=".apt_generated">
 		<attributes>
 			<attribute name="optional" value="true"/>
@@ -35,5 +35,13 @@
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-io-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-io/src"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-http-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-http/src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Controller"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-servlet-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-servlet/src/main/java"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-servlets-7.0.0.v20091005.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jasper/el-api.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper-el.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper-jdt.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jasper/jsp-api.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jasper/tomcat-juli.jar"/>
+	<classpathentry kind="output" path="portal/WEB-INF/classes"/>
 </classpath>
