--- a/Portal/build.xml
+++ b/Portal/build.xml
@@ -1,65 +1,38 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project basedir="." default="deploy" name="Portal">
+<project basedir="." default="all" name="Portal2">
 
-	<property environment="env" />
-	<property name="AppServer.location" value="../AppServer" />
-	<property name="debuglevel" value="source,lines,vars" />
-	<property name="target" value="1.6" />
-	<property name="source" value="1.6" />
+	<import file="./classpath.xml" />
 
-	<path id="HelloWorldServlet.classpath">
-		<pathelement location="bin" />
-		<pathelement location="${AppServer.location}/lib/jetty-7.0.0/servlet-api-2.5.jar" />
-		<pathelement location="${AppServer.location}/lib/jetty-7.0.0/servlet-api-2.5.jar" />
-	</path>
+	<property name="libs" value="../Libs" />
+	<property name="war" value="portalnull.war" />
 
-	<target name="init">
-		<mkdir dir="bin" />
-		<copy includeemptydirs="false" todir="bin">
-			<fileset dir="src">
-				<exclude name="**/*.launch" />
-				<exclude name="**/*.java" />
-			</fileset>
-		</copy>
+	<property name="src" value="./src" />
+	<property name="build" value="./portal/WEB-INF/classes" />
+
+	<target name="prepare">
 	</target>
 
-	<target name="clean">
-		<delete dir="bin" />
+	<target name="cleanup">
 	</target>
 
-
-	<target depends="build-subprojects,build-project" name="build" />
-
-	<target name="build-subprojects" />
-
-	<target depends="init" name="build-project">
-		<echo message="${ant.project.name}: ${ant.file}" />
-		<javac debug="true" debuglevel="${debuglevel}" destdir="bin" source="${source}" target="${target}" >
-			<src path="src" />
-			<classpath refid="HelloWorldServlet.classpath" />
+	<target name="build" depends="prepare">
+		<javac srcdir="${src}" destdir="${build}">
+			<classpath refid="classpath" />
 		</javac>
 	</target>
 
-	<target name="war" >
-		<mkdir dir="deploy" />
-		<copy todir="deploy">
+	<target name="package" depends="build">
+		<war destfile="${war}">
 			<fileset dir="portal" />
-		</copy>
-
-		<mkdir dir="deploy/WEB-INF/classes" />
-		<copy todir="deploy/WEB-INF/classes">
-			<fileset dir="bin" />
-		</copy>
-
-		<war destfile="portalnull.war" basedir="deploy" />
-		
-		<delete dir="deploy" />
+		</war>
 	</target>
 
-	<target name="deploy" depends="war">
-		<copy todir="../HttpFileServer/files">
-			<fileset file="portalnull.war" />
-		</copy>
+	<target name="mkcp">
+		<exec executable="python">
+			<arg value="../Build/buildclasspath.py" />
+		</exec>
 	</target>
+
+	<target name="all" depends="prepare,package,cleanup" />
 
 </project>
