Fehler im Security-Manager behoben. FilePermissions erwarten einen Pfad mit file.seperator's vom System. D.h. auf Windows müssen es \ sein, auf Linux /. Intern wird _immer_ mit / gearbeitet. Diese werden jetzt in den FilePermissions ausgetauscht durch das was in der System-Property file.seperator steht.
git-svn-id: svn://localhost/twospot_svn/trunk@680 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/AppServer/etc/etc/appServer.properties
+++ b/AppServer/etc/etc/appServer.properties
@@ -5,7 +5,7 @@ appServer.mode=SERVER
 # Defines the working directory in which the extracted application directores reside
 appserver.workDir=C:/temp
 
-# Defines the scratch dir wich is used by the JSP-Compiler (TODO: Currently unused!!!)
+# Defines the scratch dir wich is used by the JSP-Compiler
 appServer.scratchdir=C:/temp/scratch2
 
 ### Security options ###
