In den hbase-site.xml configs den ZooKeeper-Port auskommentiert. In der Dev-Umgebung läuft der ZooKeeper auf dem Default-Port. Im Build-Script vom Portal ein deployment-Target hinzugefügt - einfache Move-Task ins files-Directory vom FileServer. Dokumentation für die swap-Methode in der HardPolicy.
git-svn-id: svn://localhost/twospot_svn/trunk@681 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Portal/build.xml
+++ b/Portal/build.xml
@@ -15,13 +15,35 @@
 	<target name="cleanup">
 	</target>
 
+	<target name="enhance" description="DataNucleus enhancement">
+		<path id="enhancer.classpath">
+			<path refid="classpath" />
+
+			<fileset dir="../Libs/lib/datanucleus/">
+				<include name="**/*.jar" />
+			</fileset>
+
+			<pathelement location="${build}" />
+		</path>
+
+		<taskdef name="enhance" classpathref="enhancer.classpath" classname="org.datanucleus.enhancer.tools.EnhancerTask" />
+
+		<enhance classpathref="enhancer.classpath" failonerror="true" verbose="true">
+			<jvmarg line="-Dlog4j.configuration=${log4j.config.file}" />
+
+			<fileset dir="${build}">
+				<include name="**/*.class" />
+			</fileset>
+		</enhance>
+	</target>
+
 	<target name="build" depends="prepare">
 		<javac srcdir="${src}" destdir="${build}">
 			<classpath refid="classpath" />
 		</javac>
 	</target>
 
-	<target name="package" depends="build">
+	<target name="package" depends="build,enhance">
 		<war destfile="${war}">
 			<fileset dir="portal" />
 		</war>
@@ -31,6 +53,10 @@
 		<exec executable="python">
 			<arg value="../Build/buildclasspath.py" />
 		</exec>
+	</target>
+
+	<target name="deploy" depends="all">
+		<move file="${war}" todir="C:/temp/files/" />
 	</target>
 
 	<target name="all" depends="prepare,package,cleanup" />
