--- a/AppServer/etc/etc/appServer.properties
+++ b/AppServer/etc/etc/appServer.properties
@@ -2,6 +2,9 @@
 # Mode in which the AppServer is running (DEVELOPMENT, SERVER)
 appServer.mode=SERVER
 
+# Defines the URL under which the FileServer is reachable
+fileserver.url=http://localhost:5050/
+
 # Defines the working directory in which the extracted application directores reside
 appserver.workDir=C:/temp
 
