GoGo verwendet das UserService-Interface
git-svn-id: svn://localhost/twospot_svn/trunk@715 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/gogo/build.xml
+++ b/gogo/build.xml
@@ -35,6 +35,7 @@
 	</target>
 
 	<target name="build">
+		<delete dir="${dest}" />
 		<mkdir dir="${dest}" />
 		<javac srcdir="${src}" destdir="${dest}">
 			<classpath refid="classpath" />
