Das GoGo-Eclipse projekt verwendet den Libs-Ordner. Die ANT-File verwendet das eigene libs-Verzeichnis. Das kann nicht anders gelöst werden, da die GoGo-Anwendung die Demo-App ist!
git-svn-id: svn://localhost/twospot_svn/trunk@721 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/gogo/.classpath
+++ b/gogo/.classpath
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/asm-3.1.jar"/>
-	<classpathentry kind="lib" path="lib/datanucleus-core-2.0.0-m3.jar"/>
-	<classpathentry kind="lib" path="lib/datanucleus-enhancer-2.0.0-m3.jar"/>
-	<classpathentry kind="lib" path="lib/jdo2-api-2.3-eb.jar"/>
-	<classpathentry kind="lib" path="lib/jsp-api-2.1-7.0.0pre2.jar"/>
-	<classpathentry kind="lib" path="lib/servlet-api-2.5.jar"/>
-	<classpathentry kind="lib" path="lib/twospot-appserver.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/Libs/gen/twospot-appserver.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/asm-3.1.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/jdo2-api-2.3-eb.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-core-2.0.0-m3.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-enhancer-2.0.0-m3.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jsp-api-2.1-7.0.0pre2.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/servlet-api-2.5.jar"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
