Jetty logg jetzt über slf4j auf log4j.
git-svn-id: svn://localhost/twospot_svn/trunk@755 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -62,5 +62,7 @@
 	<classpathentry kind="lib" path="/Libs/gen/twospot-controller.jar"/>
 	<classpathentry kind="lib" path="/Libs/gen/twospot-util.jar"/>
 	<classpathentry kind="lib" path="/Util/etc"/>
+	<classpathentry kind="lib" path="/Libs/lib/slf4j/slf4j-api-1.5.10.jar" sourcepath="/Libs/lib/slf4j/slf4j-api-1.5.10-sources.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/slf4j/slf4j-log4j12-1.5.10.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
