--- a/AppServer/etc/etc/jdoDefault.properties
+++ b/AppServer/etc/etc/jdoDefault.properties
@@ -1,5 +1,7 @@
+javax.jdo.PersistenceManagerFactoryClass=org.datanucleus.jdo.JDOPersistenceManagerFactory
 datanucleus.ConnectionURL=hbase:
 datanucleus.ConnectionUserName=
 datanucleus.ConnectionPassword=
 
 datanucleus.autoCreateSchema=true
+datanucleus.autoCreateTables=true
