--- a/Controller/etc/etc/controller.properties
+++ b/Controller/etc/etc/controller.properties
@@ -8,3 +8,6 @@ appserver.classpath.prefix=.
 #appserver.classpath.additional=./Libs/gen/twospot-appserver.jar:./conf/appserver/:./conf/util/
 # Development:
 appserver.classpath.additional=../AppServer/bin:../Util/etc:../AppServer/etc
+
+# FileServer connection details
+fileserver.url=http://localhost:5050
