--- a/Controller/etc/etc/controller.properties
+++ b/Controller/etc/etc/controller.properties
@@ -9,5 +9,8 @@ appserver.classpath.prefix=.
 # Development:
 appserver.classpath.additional=../AppServer/bin:../Util/etc:../AppServer/etc
 
+# JVM options used to start the AppServer (Seperated by a whitespace)
+appserver.vm.options=-client
+
 # FileServer connection details
 fileserver.url=http://localhost:5050
