Alle Interfaces für Management-Daten verinheitlicht. Mechanismen zum laden und Verwalten der Daten überarbeitet. Die Information über redeployments wird nicht mehr vom Manager an die Controller verteilt. Dies soll über den ZooKeeper realisiert werden. Grund: Es wird nicht garantiert, dass jeder Controller im Manager registriert ist. Z.B. kann ein Controller vom Manager getrennt sein aber noch im Cache von einem Frontend stehen.
git-svn-id: svn://localhost/twospot_svn/trunk@806 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Controller/etc/etc/jdoDefault.properties
+++ b/Controller/etc/etc/jdoDefault.properties
@@ -5,3 +5,5 @@ datanucleus.ConnectionPassword=
 
 datanucleus.autoCreateSchema=true
 datanucleus.autoCreateTables=true
+
+datanucleus.cache.collections=false
