Apps werden im ZooKeeper registriert. Deployments werden über den ZooKeeper an alle Controller verteilt.
git-svn-id: svn://localhost/twospot_svn/trunk@808 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Controller/.classpath
+++ b/Controller/.classpath
@@ -57,7 +57,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/Libs/gen/hbaseplugin.jar"/>
-	<classpathentry kind="lib" path="/Libs/gen/twospot-util.jar"/>
+	<classpathentry kind="lib" path="/Libs/gen/twospot-util.jar" sourcepath="/Util"/>
 	<classpathentry kind="lib" path="/Util/etc"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
