ZooKeeper-Jobs überarbeitet. Portal registriert neue AppIds im ZooKeeper. Management-Daten fließen jetzt alle richtig zum Master. Hier ist noch zu überlegen ob auf asynchrone Nachrichten gesetzt wird.
git-svn-id: svn://localhost/twospot_svn/trunk@810 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Portal/.classpath
+++ b/Portal/.classpath
@@ -40,7 +40,7 @@
 	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jasper/jsp-api.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jasper/tomcat-juli.jar"/>
-	<classpathentry kind="lib" path="/Libs/gen/twospot-appserver.jar"/>
+	<classpathentry kind="lib" path="/Libs/gen/twospot-appserver.jar" sourcepath="/AppServer"/>
 	<classpathentry kind="lib" path="/Libs/gen/twospot-controller.jar"/>
 	<classpathentry kind="lib" path="/Libs/gen/twospot-util.jar"/>
 	<classpathentry kind="output" path="portal/WEB-INF/classes"/>
