--- a/Controller/etc/etc/controller.properties
+++ b/Controller/etc/etc/controller.properties
@@ -10,7 +10,7 @@ appserver.classpath.prefix=.
 appserver.classpath.additional=../AppServer/bin:../Util/etc:../AppServer/etc
 
 # JVM options used to start the AppServer (Seperated by a whitespace)
-appserver.vm.options=-client
+appserver.vm.options=-client -Xms10m -Xmx50m
 
 # FileServer connection details
 fileserver.url=http://localhost:5050
