Angefangen die Managment-Interfaces zu vereinheitlichen. Das Management-Interface besteht nur noch aus einer ping-Methode. Diese liefert ein Set aus StatsValue's zurück. Damit können einerseits flexibler Informationen übertragen werden und zum anderen wird die Anzahl der RMI-Calls drastisch reduziert. Die neue Implementierung soll zudem eine alternative Informationsübertragung z.B. über JMS oder über den ZooKeeper vorsehen. Der ZooKeeper schafft ca. 20.000 writes pro Sekunde au einem normalen Server was für einen Controller-Cluster ausreichend ist. JMS hat den Nachteil dass ein Message-Broker eingeführt werden muss.
git-svn-id: svn://localhost/twospot_svn/trunk@837 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Controller/.project
+++ b/Controller/.project
@@ -3,6 +3,7 @@
 	<name>Controller</name>
 	<comment></comment>
 	<projects>
+		<project>Util</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
