ZooKeeper-Jobs um laufende AppServer für eine AppId zu tracken.
git-svn-id: svn://localhost/twospot_svn/trunk@859 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Util/build.xml
+++ b/Util/build.xml
@@ -19,7 +19,7 @@
 	</target>
 
 	<target name="build" depends="prepare">
-		<javac srcdir="${src}" destdir="${build}">
+		<javac srcdir="${src}" destdir="${build}" debug="true">
 			<classpath refid="classpath" />
 		</javac>
 
