Parameter für BalancingProcessor's über Properties-Dateien
git-svn-id: svn://localhost/twospot_svn/trunk@863 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Controller/etc/etc/controller.properties
+++ b/Controller/etc/etc/controller.properties
@@ -14,3 +14,10 @@ appserver.vm.options=-client -Xms10m -Xmx50m
 
 # FileServer connection details
 fileserver.url=http://localhost:5050
+
+# Balancing
+balance.almostIdleProcessor.minRunime=30000
+balance.almostIdleProcessor.lowRps=5.0
+
+balance.idleProcessor.idleTime=15000
+
