Testweise ValueGenerator für den Typ Key der als neuer Primärschlüssel für die HBase-Datenbank eingesetzt werden soll
git-svn-id: svn://localhost/twospot_svn/trunk@887 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/TwoSpotJdo/src/plugin.xml
+++ b/TwoSpotJdo/src/plugin.xml
@@ -23,6 +23,12 @@
 			key="hbase" url-key="hbase" />
 	</extension>
 
+	<!-- VALUE GENERATOR -->
+	<extension point="org.datanucleus.store_valuegenerator">
+		<valuegenerator name="keygen"
+			class-name="org.prot.stor.hbase.KeyValueGenerator" unique="true" />
+	</extension>
+
 	<!-- QUERY LANGUAGES -->
 	<extension point="org.datanucleus.store_query_query">
 		<query class-name="org.prot.stor.hbase.query.JDOQLQuery"
