Name der Jar-Datei für das alte HBase-Plugin geändert
git-svn-id: svn://localhost/twospot_svn/trunk@918 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/HBasePlugin (DataNucleus)/build.xml
+++ b/HBasePlugin (DataNucleus)/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project basedir="." default="lib" name="HBasePlugin (DataNucleus)">
 	<target name="lib">
-		<jar destfile="../Libs/gen/hbaseplugin.jar">
+		<jar destfile="../Libs/gen/hbaseplugin_datanucleus.jar">
 			<fileset dir="bin">
 			</fileset>
 			<fileset dir=".">
