ClassNames im pugin.xml angepasst
git-svn-id: svn://localhost/twospot_svn/trunk@923 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/TwoSpotJdo/src/plugin.xml
+++ b/TwoSpotJdo/src/plugin.xml
@@ -19,26 +19,26 @@
 <plugin>
 	<!-- STORE MANAGER -->
 	<extension point="org.datanucleus.store_manager">
-		<store-manager class-name="org.prot.stor.hbase.HBaseStoreManager"
+		<store-manager class-name="org.prot.jdo.storage.StorageStoreManager"
 			key="hbase" url-key="hbase" />
 	</extension>
 
 	<!-- VALUE GENERATOR -->
 	<extension point="org.datanucleus.store_valuegenerator">
 		<valuegenerator name="keygen"
-			class-name="org.prot.stor.hbase.KeyValueGenerator" unique="true" />
+			class-name="org.prot.jdo.storage.KeyValueGenerator" unique="true" />
 	</extension>
 
 	<!-- QUERY LANGUAGES -->
 	<extension point="org.datanucleus.store_query_query">
-		<query class-name="org.prot.stor.hbase.query.JDOQLQuery"
+		<query class-name="org.prot.stor.jdo.storage.query.JDOQLQuery"
 			datastore="hbase" name="JDOQL" />
 	</extension>
 
 	<!-- CONNECTION FACTORY -->
 	<extension point="org.datanucleus.store_connectionfactory">
 		<connectionfactory name="hbase"
-			class-name="org.prot.stor.hbase.ConnectionFactoryImpl" transactional="true"
+			class-name="org.prot.jdo.storage.ConnectionFactoryImpl" transactional="true"
 			datastore="hbase" />
 	</extension>
 
