--- a/TwoSpotJdo/build.xml
+++ b/TwoSpotJdo/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project basedir="." default="lib" name="HBasePlugin">
+<project basedir="." default="lib" name="TwoSpotJDO">
 	<target name="lib">
 		<jar destfile="../Libs/gen/hbaseplugin.jar">
 			<fileset dir="bin">
