Alle persistenten Klassen verwenden jetzt das Key-Objekt als Primärschlüssel
git-svn-id: svn://localhost/twospot_svn/trunk@935 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Portal/.classpath
+++ b/Portal/.classpath
@@ -43,5 +43,6 @@
 	<classpathentry kind="lib" path="/Libs/gen/twospot-appserver.jar" sourcepath="/AppServer"/>
 	<classpathentry kind="lib" path="/Libs/gen/twospot-controller.jar"/>
 	<classpathentry kind="lib" path="/Libs/gen/twospot-util.jar"/>
+	<classpathentry kind="lib" path="/Libs/gen/hbaseplugin.jar"/>
 	<classpathentry kind="output" path="portal/WEB-INF/classes"/>
 </classpath>
