--- a/AppServer/etc/etc/jdoDefault.properties
+++ b/AppServer/etc/etc/jdoDefault.properties
@@ -5,3 +5,5 @@ datanucleus.ConnectionPassword=
 
 datanucleus.autoCreateSchema=true
 datanucleus.autoCreateTables=true
+
+datanucleus.cache.collections=false
