Neues Testprogramm. ZooKeeper zu den Libs hinzugefügt.
git-svn-id: svn://localhost/twospot_svn/trunk@959 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/TwoSpotJdo/.classpath
+++ b/TwoSpotJdo/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-jpa-2.0.0-m3.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-enhancer-2.0.0-m3.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/zookeeper-3.2.1/zookeeper-3.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
