--- a/TwoSpotJdo/build.xml
+++ b/TwoSpotJdo/build.xml
@@ -1,12 +1,40 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project basedir="." default="lib" name="TwoSpotJDO">
-	<target name="lib">
-		<jar destfile="../Libs/gen/hbaseplugin.jar">
-			<fileset dir="bin">
-			</fileset>
-			<fileset dir="./src">
-				<include name="plugin.xml"/>
-			</fileset>
-		</jar>		
+<project basedir="." default="all" name="TwoSpotJdo">
+
+	<import file="./classpath.xml" />
+
+	<property name="libs" value="../Libs" />
+	<property name="jar" value="${libs}/gen/hbaseplugin.jar" />
+
+	<property name="src" value="./src" />
+	<property name="build" value="./build" />
+
+	<target name="prepare">
+		<mkdir dir="${build}" />
 	</target>
+
+	<target name="cleanup">
+		<delete dir="${build}" />
+	</target>
+
+	<target name="build" depends="prepare">
+		<javac srcdir="${src}" destdir="${build}" debug="true" >
+			<classpath refid="classpath" />
+		</javac>
+	</target>
+
+	<target name="package" depends="build">
+		<jar destfile="${jar}">
+			<fileset dir="${build}" />
+		</jar>
+	</target>
+
+	<target name="mkcp">
+		<exec executable="python">
+			<arg value="../Build/buildclasspath.py" />
+		</exec>
+	</target>
+
+	<target name="all" depends="mkcp,package,cleanup" />
+
 </project>
