TwoSpotJdo läuft mit der Plattform - GoGo und Portal-Anwendung. Apache codecs 1.4 gelöscht da HBase von 1.3 abhängt.
git-svn-id: svn://localhost/twospot_svn/trunk@981 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Controller/etc/etc/controller.properties
+++ b/Controller/etc/etc/controller.properties
@@ -1,6 +1,6 @@
 # Prefix is appended before every classpath entry in the cpAppServer.txt file
 # Production:
-appserver.classpath.prefix=
+#appserver.classpath.prefix=
 # Development:
 appserver.classpath.prefix=.
 # Always use the ":" sign as separator. The entries are not extended using the prefix.
