--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -64,6 +64,6 @@
 	<classpathentry kind="lib" path="/Util/etc"/>
 	<classpathentry kind="lib" path="/Libs/lib/slf4j/slf4j-api-1.5.10.jar" sourcepath="/Libs/lib/slf4j/slf4j-api-1.5.10-sources.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/slf4j/slf4j-log4j12-1.5.10.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-codec-1.4/commons-codec-1.4.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-codec-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
