Properties wurden nicht richtig ausgelesen -> Es wurde immer die Dev-Implementierung verwendet. Der Fehler wurde behoben. In der HBase Storage-Implementierung wurden die Query-Methoden einkommentiert und entsprechend angepasst. Testprogramme laufen also jetzt auf der HBase durch.
git-svn-id: svn://localhost/twospot_svn/trunk@1002 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/TwoSpotJdo/tests/etc/jdoDefault.properties
+++ b/TwoSpotJdo/tests/etc/jdoDefault.properties
@@ -7,3 +7,5 @@ datanucleus.autoCreateSchema=true
 datanucleus.autoCreateTables=true
 
 datanucleus.cache.collections=false
+
+twospot.devserver=false
