--- a/AppServer/etc/etc/jdoDefault.properties
+++ b/AppServer/etc/etc/jdoDefault.properties
@@ -7,3 +7,5 @@ datanucleus.autoCreateSchema=true
 datanucleus.autoCreateTables=true
 
 datanucleus.cache.collections=false
+
+twospot.devserver=false
