--- a/Controller/build.xml
+++ b/Controller/build.xml
@@ -42,7 +42,7 @@
 	</target>
 
 	<target name="build" depends="prepare">
-		<javac srcdir="${src}" destdir="${build}">
+		<javac srcdir="${src}" destdir="${build}" debug="true">
 			<classpath refid="classpath" />
 		</javac>
 	</target>
