AppServer verwendet als AppDir seinen Port. Dies ermöglicht es mehrere AppServer für eine appId zu starten. Das ist z.B. Notwendig bei einem Deployment wenn noch laufende Requests durch den alten AppServer bearbeitet werden - der neue AppServer aber schon für neue Requests starten soll.
Da die Ports über den PortPool verwaltet werden, werden alte AppDir's automatisch recycelt und die Port-Nr. werden garantiert nicht doppelt vergeben! Da der AppServer immer übber "kill" beendet wird bzw. ein korrekter shutdown nicht garantiert werden kann - kann das AppDir auch nicht zuverlässig entfernt werden (z.B. alls eine einfache Nummerierung erfolgt). 

git-svn-id: svn://localhost/twospot_svn/trunk@1053 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/AppServer/etc/etc/appServer.properties
+++ b/AppServer/etc/etc/appServer.properties
@@ -3,7 +3,7 @@
 appServer.mode=SERVER
 
 # Defines the URL under which the FileServer is reachable
-fileserver.url=http://localhost:5050/
+fileserver.url=http://jack3:5050/
 
 # Defines the working directory in which the extracted application directores reside
 appserver.workDir=C:/temp
