--- a/Controller/etc/etc/controller.properties
+++ b/Controller/etc/etc/controller.properties
@@ -13,7 +13,7 @@ appserver.classpath.additional=../AppServer/bin:../Util/etc:../AppServer/etc
 appserver.vm.options=-client -Xms10m -Xmx50m
 
 # FileServer connection details
-fileserver.url=http://localhost:5050
+fileserver.url=http://jack3:5050
 
 # Balancing
 balance.almostIdleProcessor.minRunime=30000
