Die ProtoBuf-Quellcodes aus der Storage entfernt. Alle anderen Quellcodes eingecheckt. Management-Daten sollen jetzt mit ProtoBuf über UDP-Nachrichten an den Masetr geschickt werden.
git-svn-id: svn://localhost/twospot_svn/trunk@1062 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Util/build.xml
+++ b/Util/build.xml
@@ -18,6 +18,14 @@
 		<delete dir="${build}" />
 	</target>
 
+	<target name="protoc">
+		<exec executable="protoc">
+			<arg value="-I=${src}" />
+			<arg value="--java_out=${src}" />
+			<arg value="${src}/test.proto" />
+		</exec>
+	</target>
+ 
 	<target name="build" depends="prepare">
 		<javac srcdir="${src}" destdir="${build}" debug="true">
 			<classpath refid="classpath" />
