--- a/Util/.classpath
+++ b/Util/.classpath
@@ -13,5 +13,7 @@
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-continuation-7.0.0.v20091005.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/zookeeper-3.2.1/zookeeper-3.2.1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/jdo2-api-2.3-eb.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ProtoBuf"/>
+	<classpathentry kind="lib" path="/Libs/gen/google-protobuf.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
